fixed hero section on mobile vertical orientation

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -109,7 +109,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1.5rem 7%;
+    padding: 1rem 7%;
 }
 
 .header__logo img{
@@ -662,5 +662,31 @@ section {
 
     html{
         font-size: 50%;
+    }
+}
+
+
+@media (max-height:450px){
+
+    .header__content{
+        padding: 0 7%;
+    }
+
+    .home__content{
+        max-width: 80%;
+    }
+    
+    .home__title{
+        font-size: 5rem;
+        text-transform: uppercase;
+        color: var(--white);
+    }
+    
+    .home__description{
+        font-size: 2rem;
+        font-weight: lighter;
+        line-height: 1.8;
+        padding: 1rem 0;
+        color: #eee;
     }
 }
